--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
-		<link rel="stylesheet" href="/css/style.css" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" type="image/png" href="/favicon.png" />
+		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+		<link rel="icon" type="image/png" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>React Starter</title>
 	</head>
@@ -13,6 +13,6 @@
 		<div class="site-wrapper">
 			<main id="root" class="site-content content-padding"></main>
 		</div>
-		<script type="module" src="/src/main.jsx"></script>
+		<script type="module" src="./src/main.jsx"></script>
 	</body>
 </html>
